--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.16",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "driver.js": "^1.3.1",
     "react": "^18.3.1",
