--- a/package.json
+++ b/package.json
@@ -12,9 +12,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.16",
+    "@tiptap/extension-code-block-lowlight": "^2.0.4",
+    "@tiptap/extension-color": "^2.0.4",
+    "@tiptap/extension-dropcursor": "^2.1.6",
+    "@tiptap/extension-image": "^2.1.6",
+    "@tiptap/extension-text-style": "^2.0.4",
+    "@tiptap/html": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "driver.js": "^1.3.1",
+    "highlight.js": "^11.10.0",
+    "lowlight": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.8",
@@ -22,13 +34,15 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
