--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "rehype-highlight": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
