--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-select": "^5.8.0",
-    "rehype-highlight": "^7.0.0"
+    "rehype-highlight": "^7.0.0",
+    "tailgrids": "^2.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
